# event_emitter_rs

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
