[package]
name = "event-emitter-rs"
version = "0.1.0"
authors = ["Dylan-Kerler <dylankerler@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Lightweight EventEmitter"

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
bincode = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }