[package]
name = "event-emitter-rs"
version = "0.1.3"
authors = ["Dylan-Kerler <dylankerler@gmail.com>"]
repository = "https://github.com/Dylan-Kerler/event_emitter_rs"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["event-emitter", "emitter", "EventEmitter", "event"]
description = "Lightweight EventEmitter"
readme = "./README.md"

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
bincode = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
lazy_static = "1.4.0"